--- a/views/index.slim
+++ b/views/index.slim
@@ -40,7 +40,7 @@ html
               h2 Zointのクレーム先
               p
                 | <a href="https://twitter.com/ru_shalm">@ru_shalm</a>
-              a.twitter-share-button href='https://twitter.com/share' data-url='http://zoint.rutan.info' data-text='今日も一日がんばるぞい！'
+              a.twitter-share-button href='https://twitter.com/share' data-text='今日も一日がんばるぞい！'
                 | Tweet
 
     script src='https://code.jquery.com/jquery-2.2.3.min.js'
