change image url

--- a/views/index.slim
+++ b/views/index.slim
@@ -12,7 +12,7 @@ html
     .wrapper
       .container.no-height
         .background
-          img src="http://ecx.images-amazon.com/images/I/51YBpNhTdwL._PV350_.jpg" alt="NEW GAME!  (3) (まんがタイムKRコミックス)"
+          img src="https://images-na.ssl-images-amazon.com/images/I/51YBpNhTdwL._PV350_.jpg" alt="NEW GAME!  (3) (まんがタイムKRコミックス)"
 
       #js-tweets.tweets
 
